neo4j/neo4j-template.yaml

---
# Source: neo4j/templates/neo4j-loadbalancer.yaml
# Service for applications that need access to neo4j
apiVersion: v1
kind: Service
metadata:
  name: "neo4j-lb-neo4j"
  namespace: "neo4j"
  labels:
    helm.neo4j.com/neo4j.name: "neo4j"
    app: "neo4j"
    helm.neo4j.com/service: "neo4j"    
spec:
  type: "ClusterIP"
  
  externalTrafficPolicy: Local
  sessionAffinity: None
  ports:
    - protocol: TCP
      port: 7474
      targetPort: 7474
      name: http
    - protocol: TCP
      port: 7473
      targetPort: 7473
      name: https
    - protocol: TCP
      port: 7687
      targetPort: 7687
      name: tcp-bolt 
  selector:
    app: "neo4j"
    helm.neo4j.com/clustering: "false"
    helm.neo4j.com/neo4j.loadbalancer: include
---
# Source: neo4j/templates/neo4j-svc.yaml
# ClusterIP service for bolt / http connections
apiVersion: v1
kind: Service
metadata:
  name: "neo4j"
  namespace: "neo4j"
  labels:
    helm.neo4j.com/neo4j.name: "neo4j"
    app: "neo4j"
    helm.neo4j.com/instance: "neo4j"
    helm.neo4j.com/service: "default"    
spec:
  publishNotReadyAddresses: false
  type: ClusterIP
  selector:
    app: "neo4j"
    helm.neo4j.com/instance: "neo4j"
  ports:
    - protocol: TCP
      port: 7687
      targetPort: 7687
      name: tcp-bolt
    - protocol: TCP
      port: 7474
      targetPort: 7474
      name: tcp-http
---
# Source: neo4j/templates/neo4j-svc.yaml
# ClusterIP service for admin connections to Neo4j inside Kubernetes.
apiVersion: v1
kind: Service
metadata:
  name: "neo4j-admin"
  namespace: "neo4j"
  labels:
    helm.neo4j.com/neo4j.name: "neo4j"
    app: "neo4j"
    helm.neo4j.com/instance: "neo4j"
    helm.neo4j.com/service: "admin"    
spec:
  publishNotReadyAddresses: true
  type: "ClusterIP"
  selector:
    app: "neo4j"
    helm.neo4j.com/instance: "neo4j"
  ports:
    - protocol: TCP
      port: 7687
      targetPort: 7687
      name: tcp-bolt
    - protocol: TCP
      port: 7474
      targetPort: 7474
      name: tcp-http
---
# Source: neo4j/templates/neo4j-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    helm.neo4j.com/neo4j.name: "neo4j"
    helm.neo4j.com/clustering: "false"
    app: "neo4j"
    helm.neo4j.com/instance: neo4j    
  name: neo4j
  namespace: "neo4j"
spec:
  serviceName: "neo4j"
  podManagementPolicy: "Parallel" # This setting means that the StatefulSet controller doesn't block applying changes until the existing Pod is READY.
  replicas: 1
  selector:
    matchLabels:
      app: "neo4j"
      helm.neo4j.com/instance: "neo4j"
  template:
    metadata:
      labels:
        app: "neo4j"
        helm.neo4j.com/neo4j.name: "neo4j"
        helm.neo4j.com/clustering: "false"
        helm.neo4j.com/pod_category: "neo4j-instance" # used for anti affinity rules
        helm.neo4j.com/neo4j.loadbalancer: "include"
        helm.neo4j.com/instance: "neo4j"        
      annotations:
        "checksum/neo4j-config": a8adc60e810c5346011df3d5f08a83a83d06f4509fee29c6da7fb5296faecd5a
        "checksum/neo4j-env": fb27bab3192ea2ba57c35d2fa990b957d0db159b95a98f0d73f445cc95b1a656        
    spec:      
      affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              - labelSelector:
                  matchLabels:
                    app: "neo4j"
                    helm.neo4j.com/pod_category: "neo4j-instance"
                topologyKey: kubernetes.io/hostname
      dnsPolicy: ClusterFirst
      securityContext: 
        fsGroup: 7474
        fsGroupChangePolicy: Always
        runAsGroup: 7474
        runAsNonRoot: true
        runAsUser: 7474            
      terminationGracePeriodSeconds: 3600            
      containers:
        - name: "neo4j"
          image: "neo4j:5.17.0"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 7474
              name: http
            - containerPort: 7687
              name: bolt
          resources:
            limits:
              cpu: "0.5"
              memory: 2Gi
            requests:
              cpu: "0.5"
              memory: 2Gi
          securityContext: 
              runAsGroup: 7474
              runAsNonRoot: true
              runAsUser: 7474
          volumeMounts:
            - mountPath: "/config/neo4j.conf"
              name: neo4j-conf
            - mountPath: "/config/server-logs.xml"
              name: neo4j-server-logs
            - mountPath: "/config/user-logs.xml"
              name: neo4j-user-logs
            - mountPath: "/config/neo4j-auth"
              name: neo4j-auth
                                                            
            - mountPath: "/backups"
              name: "data"
              subPathExpr: "backups"
            - mountPath: "/data"
              name: "data"
              subPathExpr: "data"
            - mountPath: "/import"
              name: "data"
              subPathExpr: "import"
            - mountPath: "/licenses"
              name: "data"
              subPathExpr: "licenses"
            - mountPath: "/logs"
              name: "data"
              subPathExpr: "logs/$(POD_NAME)"
            - mountPath: "/metrics"
              name: "data"
              subPathExpr: "metrics/$(POD_NAME)"            
          readinessProbe:
            tcpSocket:
              port: 7687
            failureThreshold: 20
            timeoutSeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 7687
            failureThreshold: 40
            timeoutSeconds: 10
            periodSeconds: 5
          startupProbe:
            tcpSocket:
              port: 7687
            failureThreshold: 1000
            periodSeconds: 5
      volumes:
        - name: neo4j-conf
          projected:
            defaultMode: 0440
            sources:
              - configMap:
                  name: "neo4j-default-config"
              - configMap:
                  name: "neo4j-user-config"
              - configMap:
                  name: "neo4j-k8s-config"
        - name: neo4j-server-logs
          configMap:
            name: "neo4j-server-logs-config"
        - name: neo4j-user-logs
          configMap:
            name: "neo4j-user-logs-config"
        - name: "neo4j-auth"
          secret:
            secretName: "neo4j-auth"                                
  volumeClaimTemplates: 
    - metadata:
        name: "data"
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: neo4j-vs
  namespace: neo4j
spec:
  gateways:
  - istio-system/general-gateway
  hosts:
  - 'neo4j.stack.fredgentech.net'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: neo4j-lb-neo4j
        port:
          number: 7474
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: database-vs
  namespace: neo4j
spec:
  gateways:
  - istio-system/general-gateway
  hosts:
  - 'bolt.stack.fredgentech.net'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: neo4j-lb-neo4j
        port:
          number: 7687
